# one-minute-menu

./: .dockerignore  .env.production.example  .eslintrc.json  .gitignore  .vercelignore  010_TASK_VERIFICATION.md  ADMIN_REORGANIZATION_SUMMARY.md  APPLY_FIX_NOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEV_RUNBOOK.md  DOCKER_BUILD_COMPLETE.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_CLEANUP_PLAN.md  Dockerfile  Dockerfile.alternative  FIX_NEXTJS_CACHE.md  FIX_STUBBORN_DELETE_SUMMARY.md  GOOGLE_VISION_SETUP.md  ITEM_ID_FIX_DIAGRAM.md  JEST_MODULE_LOADING_RESOLUTION.md  NANO_BANANA_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SQL_QUICK_REFERENCE.md  QUICK_FIX_INSTRUCTIONS.md  README.md  READY_TO_TEST.md  REVISED_THROTTLING_PLAN.md  SECURITY_LOGGING_INVESTIGATION.md  SECURITY_NEXTJS_VULNERABILITIES.md  SYSTEM_ARCHITECTURE.md  TASK_19_SUMMARY.md  TEXTURED_BACKGROUNDS_FEATURE.md  UPLOAD_FIX_SUMMARY.md  WAITLIST_ACCESSIBILITY_IMPROVEMENTS.md  WAITLIST_UX_IMPROVEMENTS.md  WAITLIST_VISUAL_SUMMARY.md  add-image-hash-column.sql  apply-migrations-012-013.sql  apply-template-migration.mjs  (+84 more)
_workers/: .env.example  ANSWER_TO_YOUR_QUESTION.md  API.md  DOCKER_BUILD_SUCCESS.md  DOCKER_QUICK_REFERENCE.md  FAQ.md  GETTING_STARTED.md  INDEX.md  LOCAL_SETUP_GUIDE.md  QUICK_START.md  (+5 more)
workers/ocr/: README.md  pyproject.toml  requirements.txt
workers/ocr/src/kiro_ocr_worker/: config.py  db.py  main.py  ocr.py
workers/ocr/src/kiro_ocr_worker.egg-info/: PKG-INFO  SOURCES.txt
workers/ocr/src/ocr_worker/: db.py
workers/ocr/tests/: test_config.py  test_pipeline.py
(+1298 files in other folders)
