[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiro-ocr-worker"
version = "0.1.0"
description = "OCR worker for Kiro QR Menu System"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocr_worker*"]
exclude = ["tests*"]


